tests/snapshots/run_wpt_conformance__coreml_quantized_sigmoid.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
qdq_subgraph.https.any.js quantized sigmoid, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type quantize: parameter scale[0] has invalid rank 2, expected [0, 1].

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    input: f32[2, 3];
  }

  consts {
    operand_1: f32[1, 1] @bytes([0, 0, 128, 59]);
    operand_2: i8[1, 1] @bytes([128]);
    operand_3: f32[1, 1] @bytes([0, 0, 128, 59]);
    operand_4: i8[1, 1] @bytes([128]);
  }

  nodes {
    [operand_5] = quantizeLinear(input, operand_1, operand_2, label="");
    [operand_6] = dequantizeLinear(operand_5, operand_1, operand_2, label="");
    [operand_7] = sigmoid(operand_6, label="");
    [operand_8] = quantizeLinear(operand_7, operand_3, operand_4, label="");
    [output] = dequantizeLinear(operand_8, operand_3, operand_4, label="");
  }

  outputs { output; }
}
